--- a/asset/css/responsive.css
+++ b/asset/css/responsive.css
@@ -199,15 +199,30 @@
 }
     
     @media only screen and (max-width: 374px){
-        .input-group-text__icon{
-            padding-left: 9px;
-            padding-right: 9px;
+
+        .input-group-text__icon {
+            padding-left: 13px;
+            padding-right: 13px;
         }
         .nav-logo {
             margin: 0;    
         }
         .input-search.navbar-search {
-            width: 176px;
-            padding-left: 5px;
+            width: 200px;
+            padding-left: 10px;
+        }
+    }
+    @media only screen and (max-width: 342px){
+
+        .input-group-text__icon {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+        .nav-logo {
+            margin: 0;    
+        }
+        .input-search.navbar-search {
+            width: 178px;
+            padding-left: 6px;
         }
     }
